[package]
name = "epics"
version = "0.3.0"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
edition = "2018"
documentation = "https://binp-automation.github.io/epics-rs/target/doc/epics/"

[dependencies]
libc = "0.2"
log = "0.4"
lazy_static = "1.3.0"
epics-sys = { git = "https://github.com/binp-automation/epics-sys", rev = "a297e9c96d6c7f6bea22646200aaa082c24ed71f" }

[dev-dependencies]
simple_logger = "1.2.0"
